Added a script to evaluate renderings

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,17 @@
 [
     {
-        "take_name": "iiith_soccer_030_6",
-        "start_time": 25.086809809399814,
-        "end_time": 35.08680980939981
+        "take_name": "unc_basketball_03-31-23_01_17",
+        "start_time": 4.662912959304347,
+        "end_time": 14.662912959304347
+    },
+    {
+        "take_name": "iiith_cooking_58_2",
+        "start_time": 5.455872510610979,
+        "end_time": 15.455872510610979
+    },
+    {
+        "take_name": "georgiatech_covid_03_4",
+        "start_time": 151.7000305174558,
+        "end_time": 161.7000305174558
     }
 ]
