Added an egogaussian-like sequence

--- a/settings.json
+++ b/settings.json
@@ -13,5 +13,10 @@
         "take_name": "georgiatech_covid_03_4",
         "start_time": 151.7000305174558,
         "end_time": 161.7000305174558
+    },
+    {
+        "take_name": "iiith_cooking_111_2",
+        "start_time": 8.3333,
+        "end_time": 14.0
     }
 ]
