--- a/settings.json
+++ b/settings.json
@@ -18,5 +18,30 @@
         "take_name": "iiith_cooking_111_2",
         "start_time": 8.3333,
         "end_time": 14.0
+    },
+    {
+        "take_name": "minnesota_rockclimbing_013_2",
+        "start_time": 56.7656455458209,
+        "end_time": 66.7656455458209
+    },
+    {
+        "take_name": "uniandes_basketball_003_43",
+        "start_time": 14.314687670746904,
+        "end_time": 24.314687670746906
+    },
+    {
+        "take_name": "utokyo_pcr_2001_31_8",
+        "start_time": 147.93029284556837,
+        "end_time": 157.93029284556837
+    },
+    {
+        "take_name": "georgiatech_bike_01_4",
+        "start_time": 32.29675191752501,
+        "end_time": 42.29675191752501
+    },
+    {
+        "take_name": "indiana_bike_02_3",
+        "start_time": 139.1854609530407,
+        "end_time": 149.1854609530407
     }
 ]
