--- a/settings.json
+++ b/settings.json
@@ -1,51 +1,61 @@
 [
     {
         "take_name": "unc_basketball_03-31-23_01_17",
+        "type": "non_eg",
         "start_time": 4.662912959304347,
         "end_time": 14.662912959304347
     },
     {
         "take_name": "iiith_cooking_58_2",
+        "type": "non_eg",
         "start_time": 5.455872510610979,
         "end_time": 15.455872510610979
     },
     {
         "take_name": "georgiatech_covid_03_4",
+        "type": "non_eg",
         "start_time": 151.7000305174558,
         "end_time": 161.7000305174558
     },
     {
-        "take_name": "iiith_cooking_111_2",
-        "start_time": 8.3333,
-        "end_time": 14.0
-    },
-    {
         "take_name": "minnesota_rockclimbing_013_2",
+        "type": "non_eg",
         "start_time": 56.7656455458209,
         "end_time": 66.7656455458209
     },
     {
         "take_name": "uniandes_basketball_003_43",
+        "type": "non_eg",
         "start_time": 14.314687670746904,
         "end_time": 24.314687670746906
     },
     {
         "take_name": "utokyo_pcr_2001_31_8",
+        "type": "non_eg",
         "start_time": 147.93029284556837,
         "end_time": 157.93029284556837
     },
     {
         "take_name": "georgiatech_bike_01_4",
+        "type": "non_eg",
         "start_time": 32.29675191752501,
         "end_time": 42.29675191752501
     },
     {
         "take_name": "indiana_bike_02_3",
+        "type": "non_eg",
         "start_time": 139.1854609530407,
         "end_time": 149.1854609530407
     },
     {
+        "take_name": "iiith_cooking_111_2",
+        "type": "eg",
+        "start_time": 8.3333,
+        "end_time": 14.0
+    },
+    {
         "take_name": "georgiatech_cooking_08_02_4",
+        "type": "eg",
         "start_time": 383.0,
         "end_time": 393.0
     }
