Replace one seq with no vrs file

--- a/settings.json
+++ b/settings.json
@@ -60,10 +60,10 @@
         "end_time": 506.8375160194219
     },
     {
-        "take_name": "nus_soccer_19_4",
+        "take_name": "nus_cpr_46_1",
         "type": "non_eg",
-        "start_time": 51.530600582695655,
-        "end_time": 61.530600582695655
+        "start_time":  66.91801106811693,
+        "end_time": 76.91801106811693
     },
     {
         "take_name": "iiith_cooking_24_1",
