Replace uniandes_climbing as it has vertical orientation frames?

--- a/settings.json
+++ b/settings.json
@@ -6,10 +6,10 @@
         "end_time": 55.08989480986421
     },
     {
-        "take_name": "uniandes_bouldering_034_26",
+        "take_name": "minnesota_cooking_040_2",
         "type": "non_eg",
-        "start_time": 13.30974526420713,
-        "end_time": 23.30974526420713
+        "start_time": 111.33239355917874,
+        "end_time": 121.33239355917874
     }, 
     {
         "take_name": "upenn_0710_Guitar_1_6",
